--- a/Client/src/components/Form/Form.module.css
+++ b/Client/src/components/Form/Form.module.css
@@ -1,49 +1,58 @@
-@font-face {
-    font-family: 'getSchwifty';
-    src:
-        url('getSchwifty.ttf') format('truetype'),
-        url('getschwifty-webfont.woff2') format('woff2'),
-        url('getschwifty-webfont.woff') format('woff');
-    font-weight: medium;
-    font-style: medium;
-}
-
-@font-face {
-    font-family: 'WubbaLubbaDubDub';
-    src:
-        url('WubbaLubbaDubDub.ttf') format('truetype'),
-        url('WubbaLubbaDubDub.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-.contenedorDiv{
+/* Div principal */
+.div1{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../Asserts/fondo-body.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     min-height: 100vh;
+    background-image: url("../Asserts/fondo-body.jpg");
 }
 
-.contenedorForm{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-image: url("../Asserts/fondoForm.jpg");
-    background-position: center 85%;
-    width: 320px;
-    height: 430px;
-    border-radius: 15px;
-    box-shadow: 3px 15px 10px 5px #8ffe77;
-    transition: all 500ms ease-in-out;
-    padding: 20px;
-    margin: 10px;
-    animation: lights 4000ms infinite ease-in;
-    position: absolute;
+/* Div form */
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 35%;
+  height: 88vh;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 5px;
+  display: grid;
+    
+  background-image: url("../Asserts/fondoForm.jpg");
+  background-position: center 60%;
+  transition: all 500ms ease-in-out;
+  box-shadow: 3px 15px 10px 5px #8ffe77;
+  animation: lights 4000ms infinite ease-in;
+}
+
+/* Grupo de label, input y error */
+.formGroup {
+  color: aliceblue;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+  gap: 30px;
+}
+
+/* Label */
+.labelForm {
+  color: #00ff00;
+  font-family: 'getSchwifty', sans-serif;
+  font-size: 23px;
+  text-shadow: 0 0 15px #00b0c8, 0 0 10px #00b0c8;
+}
+
+/* Input */
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .inputForm{
@@ -54,34 +63,34 @@
     font-family: 'WubbaLubbaDubDub';
     animation: lights 3000ms infinite ease-out;
     width: 250px;
-    font-size: 20px;
-    position: absolute;
-    top: 88px;
+    font-size: 20px;  
+    box-sizing: border-box;
 }
 
 .inputForm:focus {
-    border: 4px solid #C0E66E;
+    border: 3px solid #C0E66E;
     transition: all 100ms ease-out;
     animation: none;
+    box-sizing: border-box;
 }
 
-.inputForm2{
-    background:white;
-    outline: none;
-    color: #00b0c8;
-    border-radius: 16px;
-    font-family: 'WubbaLubbaDubDub';
-    animation: lights 3000ms infinite ease-out;
-    width: 250px;
-    font-size: 20px;
-    position: absolute;
-    top: 235px;
+/* Error p */
+.errorForm {
+  color: red;
+  font-size: 15px;
+  margin-top: 10px;
 }
 
-.inputForm2:focus {
-    border: 4px solid #C0E66E;
-    transition: all 100ms ease-out;
-    animation: none;
+.errorContainer {
+  height: 20px; /* Establece la altura fija deseada para los mensajes de error */
+}
+
+.errorVisible {
+  visibility: visible; /* Mostrar el contenedor de error */
+}
+
+.errorHidden {
+  visibility: hidden; /* Ocultar el contenedor de error */
 }
 
 .botonForm{
@@ -94,73 +103,49 @@
     font-family: 'WubbaLubbaDubDub';
     width: 120px;
     height: 30px;
-    position: absolute;
-    bottom: 25px;
 }
 
 .botonForm:hover{
-    border: 2px solid #8ffe77;
-    box-shadow: 0px 0px 10px 2px;
-    animation: none;
-    background-color: #00b0c8;
+  border: 2px solid #8ffe77;
+  box-shadow: 0px 0px 10px 2px;
+  animation: none;
+  background-color: #00b0c8;
 }
 
-.labelForm{
-    color: #00ff00;
-    font-family: 'getSchwifty', sans-serif;
-    font-size: 25px;
-    position: absolute;
-    top: 40px;
-    text-shadow: 0 0 15px #00b0c8, 0 0 10px #00b0c8;
-}
-.labelForm2{
-    color: #00ff00;
-    font-family: 'getSchwifty', sans-serif;
-    font-size: 25px;
-    /* margin-top: 15px; */
-    margin-bottom: 8px;
-    position: absolute;
-    top: 188px;
-    text-shadow: 0 0 15px #00b0c8, 0 0 10px #00b0c8;
+.botonForm:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+} 
+
+.div2{
+  text-align: center;
+  align-items: center;
+  padding-bottom: 100px;
 }
 
-@keyframes lights {
-    0% {
-    box-shadow: 0px 0px 10px 2px #00d8f5;
-    border: 1px solid #00ff00;
-    }
-    50% {
-    box-shadow: 0px 0px 10px 2px #007282;
-    border: 1px solid #21b601;
-    }
-    70% {
-    box-shadow: 0px 0px 10px 2px #007282;
-    border: 1px solid #007282;
-    }
-    100% {
-    box-shadow: 0px 0px 10px 2px #00d8f5;
-    border: 1px solid #00ff00;
-    }
+.div3{
+  text-align: center;
+  align-items: center;
+  margin-left: 25%;
 }
 
-.p1{
-    color: red;
-    font-size: 18px;
-    font-family: 'WubbaLubbaDubDub';
-    padding-top: 0px;
-    margin-top: 5px;
-    position: absolute;
-    top: 120px;
+.h4Register{
+  color: white;
+  font-weight: 900;
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  padding-top: 25px;
 }
 
-.p2{
-    color: red;
-    font-size: 18px;
-    font-family: 'WubbaLubbaDubDub';
-    padding-top: 0px;
-    margin-top: 5px;
-    position: absolute;
-    top: 268px;
+.linkSign{
+  color: #8ffe77;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.linkSign:hover{
+  color: #00ff00;
 }
 
 .botonForm:disabled {
@@ -189,3 +174,43 @@
 .backForm:hover{
     background-color: green;
 }
+
+
+@keyframes lights {
+  0% {
+  box-shadow: 0px 0px 10px 2px #00d8f5;
+  border: 1px solid #00ff00;
+  }
+  50% {
+  box-shadow: 0px 0px 10px 2px #007282;
+  border: 1px solid #21b601;
+  }
+  70% {
+  box-shadow: 0px 0px 10px 2px #007282;
+  border: 1px solid #007282;
+  }
+  100% {
+  box-shadow: 0px 0px 10px 2px #00d8f5;
+  border: 1px solid #00ff00;
+  }
+}
+
+@font-face {
+  font-family: 'getSchwifty';
+  src:
+      url('getSchwifty.ttf') format('truetype'),
+      url('getschwifty-webfont.woff2') format('woff2'),
+      url('getschwifty-webfont.woff') format('woff');
+  font-weight: medium;
+  font-style: medium;
+}
+
+@font-face {
+  font-family: 'WubbaLubbaDubDub';
+  src:
+      url('WubbaLubbaDubDub.ttf') format('truetype'),
+      url('WubbaLubbaDubDub.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
