--- a/Client/src/components/Detail.jsx/Detail.module.css
+++ b/Client/src/components/Detail.jsx/Detail.module.css
@@ -47,7 +47,7 @@
     color: #00ff00;
     position: absolute;
     left: 65px;
-    top: 75px;
+    top: 40%;
     font-family: "WubbaLubbaDubDub";
     font-size: 20px;
     text-shadow: 4px 4px 5px rgba(72,176,211,1);
