--- a/Client/src/components/Episodes/Episode.module.css
+++ b/Client/src/components/Episodes/Episode.module.css
@@ -19,6 +19,13 @@
 
 .activeLink{
     color: white;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.activeLink:hover{
+    color: #00c3dd;
+    font-size: 22px;
 }
 
 .episode{
